--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-native": "^12.2.2",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jest": "^29.5.3",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
