--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,10 @@ sonar.organization=varunsaini2112
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
+sonar.sources=app
+sonar.exclusions=**/node_modules/**,**/*.test.*,**/jest.config.**
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
