sonar test inclusions added

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,6 +6,9 @@ sonar.organization=varunsaini2112
 #sonar.projectVersion=1.0
 
 
+# Coverage configuration
+sonar.test.inclusions=**/*.test.*
+
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
 sonar.sources=app
