--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-native-masked-view/masked-view": "0.2.9",
     "@react-navigation/native": "6.1.7",
     "@react-navigation/stack": "6.3.17",
+    "@reduxjs/toolkit": "1.9.5",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "2.12.1",
     "react-native-safe-area-context": "4.7.1",
-    "react-native-screens": "3.24.0"
+    "react-native-screens": "3.24.0",
+    "react-redux": "8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
