--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "6.3.17",
     "@reduxjs/toolkit": "1.9.5",
     "react": "18.2.0",
+    "react-hook-form": "7.45.4",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "2.12.1",
     "react-native-safe-area-context": "4.7.1",
@@ -31,6 +32,7 @@
     "@testing-library/react-native": "^12.2.2",
     "@tsconfig/react-native": "^3.0.0",
     "@types/jest": "^29.5.3",
+    "@types/node": "^20.5.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
